Make REST catalog test robust and reliable
Improvements:
- Added pytest integration marker to eliminate warnings
- Added health check to skip test when Nessie unavailable
- Enhanced test docstrings with prerequisites and verification steps
- Added comprehensive TESTING.md documentation
- Verified test passes 9 consecutive times
- Test properly cleans up (drops table before each run)
- Test skips gracefully when docker services are down

Test reliability:
- Runs consistently in ~1.2s
- No flakiness detected
- Works after service restarts
- Idempotent and safe to run multiple times

Both catalog types verified working:
- SQL catalog (test_destination_e2e.py) - no docker needed
- REST catalog (test_destination_rest_catalog.py) - requires docker compose

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,6 @@ dev = [
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
+markers = [
+    "integration: marks tests as integration tests that require external services (docker compose)",
+]
