--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "sidequery-dlt"
+name = "dlt-iceberg"
 version = "0.1.0"
 description = "dlt custom destination for Apache Iceberg with REST catalog support"
 requires-python = ">=3.11"
@@ -20,7 +20,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/sidequery_dlt"]
+packages = ["src/dlt_iceberg"]
 
 [dependency-groups]
 dev = [
