Add partitioning support with pyiceberg-core
- Added pyiceberg[pyiceberg-core] dependency for partition transforms
- Converted partition e2e tests to use REST catalog (Nessie)
- Support x-partition and x-partition-transform custom hints
- All partition tests passing (28 unit + 3 integration)
- Updated README with partitioning documentation
- Temporal, bucket, truncate, and identity transforms fully supported

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "pandas>=2.3.3",
     "pyarrow>=21.0.0",
     "pydantic<2.11",
-    "pyiceberg>=0.10.0",
+    "pyiceberg[pyiceberg-core]>=0.10.0",
     "requests>=2.32.5",
     "s3fs>=0.4.2",
     "sqlalchemy>=2.0.44",
