Add PyPI metadata to pyproject.toml
- Added README.md as project description
- Added license, authors, keywords, classifiers
- Added project URLs (homepage, repository, issues)
- Improved description to highlight atomic multi-file commits

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,25 @@
 [project]
 name = "dlt-iceberg"
 version = "0.1.1"
-description = "dlt custom destination for Apache Iceberg with REST catalog support"
+description = "dlt destination for Apache Iceberg with atomic multi-file commits via REST catalogs"
+readme = "README.md"
 requires-python = ">=3.11"
+license = {text = "MIT"}
+authors = [
+    {name = "Sidequery", email = "hello@sidequery.com"}
+]
+keywords = ["dlt", "iceberg", "data-engineering", "etl", "elt", "data-pipeline"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Database",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "boto3>=1.40.50",
     "dlt>=1.17.1",
@@ -14,6 +31,11 @@ dependencies = [
     "s3fs>=0.4.2",
     "sqlalchemy>=2.0.44",
 ]
+
+[project.urls]
+Homepage = "https://github.com/sidequery/dlt-iceberg"
+Repository = "https://github.com/sidequery/dlt-iceberg"
+Issues = "https://github.com/sidequery/dlt-iceberg/issues"
 
 [build-system]
 requires = ["hatchling"]
