Add DuckDB integration for pipeline.dataset()
- Implement WithSqlClient interface for IcebergRestClient
- Implement SupportsOpenTables interface for table access
- Add IcebergSqlClient class for DuckDB views via iceberg_scan()
- Add duckdb as dependency
- Add comprehensive tests for dataset integration
- Update README with new features and DuckDB documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 dependencies = [
     "boto3>=1.40.50",
     "dlt>=1.17.1",
+    "duckdb>=1.4.3",
     "pandas>=2.3.3",
     "pyarrow>=21.0.0",
     "pydantic<2.11",
