--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Start Docker services
-        run: docker compose up -d
+        run: |
+          docker compose up -d
+          docker compose wait lakekeeper-setup minio-setup
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
@@ -26,12 +28,6 @@ jobs:
 
       - name: Install dependencies
         run: uv sync
-
-      - name: Wait for services
-        run: |
-          echo "Waiting for services to be healthy..."
-          timeout 60 bash -c 'until docker compose ps | grep -q "healthy"; do sleep 2; done'
-          echo "Services are healthy"
 
       - name: Run unit tests
         run: uv run pytest tests/ -m "not integration" -v
