--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,20 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Start Docker services
+        run: docker compose up -d
+
+      - name: Wait for setup containers
         run: |
-          docker compose up -d
-          docker compose wait lakekeeper-setup minio-setup
+          for container in minio-setup lakekeeper-setup; do
+            echo "Waiting for $container..."
+            exit_code=$(docker container wait $container)
+            if [ "$exit_code" != "0" ]; then
+              echo "$container failed with exit code $exit_code"
+              docker logs $container
+              exit 1
+            fi
+            echo "$container completed successfully"
+          done
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
