--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,8 @@ services:
     container_name: lakekeeper-catalog
     ports:
       - "8282:8181"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       <<: *lakekeeper-env
     command: serve
@@ -140,6 +142,8 @@ services:
   lakekeeper-setup:
     image: curlimages/curl:latest
     container_name: lakekeeper-setup
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       lakekeeper:
         condition: service_healthy
